    - many small typos in manpages.

  Sources
  -------
    - Optimize and update menue header line.  (src/crt.S)
    - Fix some typos in sources.  (src/bsect.c, src/raid.c)
    - LVM volume as root device.  (src/bsect.c)
    - Remove patch for inaccessible disks (src/geometry.c)
        and add remarks in README file.
    - Better computing size of uncompressed kernel. (src/boot.c)
    - Working on degraded RAID device     (src/raid.c)
        (thanks to Christian Schöninger)

  General
  -------
    - Use better 'checkit' for newer gcc.  (checkit)
    - Remove very old scripts.      (mkbdist, mksdist,QuickInst)
    - Create new makefile-based script QuickInst.


Changes for version 23.0 (28-June-2010) - Joachim Wiedorn

  Documentations
  --------------
    - Move very old file INCOMPAT into readme/.
    - Update file COPYING with copyrights and license.
    - Update copyrights in some file headers.
    - Add new files README, TODO, NEWS.
    - Fix for some typos in manpages.
    - Update some old files in readme/ and docs/.
    - Move to creating pdf instead of ps in /docs.
    - Add found old manpage man/keytab-lilo.pl.
    - Update additional informations  (lilo.lsm, sample/README).
    - Set static manpage path to /usr/share/man (make.vars).
    - Update of the program command logging header.

  Sources
  -------
    - Fix error messages.           (script checkit)
    - Allow spaces in boot menu.    (bsect.c)
    - Workaround for buggy Bios.    (probe.c)
    - Check for user root.          (script mkrescue)
    - Use better temporary fifo's   (script mkrescue)
    - Check for needed floppy space (script mkrescue)
    - devmapper should use major/minor.  (geometry.c)
    - Bios workarounds.             (second.S)
    - Suppress error message if device does not exist. (geometry.c)
    - Change 'map' to 'kmap'.       (keytab-lilo.pl)
    - Add warnings for inaccessible disk (device.c, geometry.c)
    - Modify script mkrescue for use of spaces in files.